# ML4AVX

./: .clang-format  CMakeLists.txt  README.md  full-auto.sh  semi-auto.sh
src/: imath.h  main.cpp  smath.h
src/Ops/: OP_base.h  OP_conv2d.cpp  OP_conv2d.h
